--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                         Center your image with X: horizontal, Y: vertical 
                                     ====================-->
                                     <image 
-  href="assets/img/transparent.png"
+  href="https://i.ibb.co/39BptqJm/transparent.png"
   x="-25"
   y="-45"
   width="250"
@@ -141,7 +141,7 @@
                 <span class="section__subtitle">My introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/Likhitha.jpg" alt="" class="about__img">
+                    <img src="https://i.ibb.co/fVk8hpbB/Likhitha.jpg" alt="" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description">Describing myself, I embody a resilient and determined mindset, capable of tackling any challenge with unwavering positivity. Furthermore, I consider myself a dedicated knowledge seeker,committed to continuous learning and personal development. 
